--- a/Sources/Applications.tex
+++ b/Sources/Applications.tex
@@ -117,8 +117,7 @@ derive, in a automatic way, a third algebra $F[A\ \&\ B]$ that combines the resu
 of the two algebras. This combinator bears a similarity to a
 \lstinline{zip}-like operation in functional programming, and it is also directly
 related to nested composition in object-oriented programming, as we have studied
-in \cref{chap:nested}. Without further due, here is the definition of a Object
-Algebra combinator in \sedel:
+in \cref{chap:nested}. In \sedel the definition of an Object Algebra combinator is:
 \lstinputlisting[linerange=76-78]{./examples/application.sl}% APPLY:linerange=COMBINE
 That is it. None of the boilerplate in other
 approaches~\citep{oliveira2012extensibility}, or type-unsafe meta-programming
