--- a/Sources/Traits.tex
+++ b/Sources/Traits.tex
@@ -51,7 +51,7 @@ new objects, as any other classes.
 In contrast, most statically-typed
 languages do not have first-class classes and dynamic
 inheritance. While all statically-typed OO languages allow first-class
-\emph{objects} (i.e. objects can be passed as arguments and returned
+\emph{objects} (i.e., objects can be passed as arguments and returned
 as results), the same is not true for classes. Classes in languages such
 Scala, Java or C++ are typically a second-class construct, and the
 inheritance hierarchy is \emph{statically determined}. The closest thing
@@ -83,7 +83,7 @@ to be a necessary compromise when typing was also desired.
 Only recently some progress has been made in statically typing
 first-class classes and dynamic inheritance. In particular there are
 two works in this area: Racket's gradually
-typed first-class classes~\citep{DBLP:conf/oopsla/TakikawaSDTF12}; and Lee et al.'s model of
+typed first-class classes~\citep{DBLP:conf/oopsla/TakikawaSDTF12}; and \citeauthor{DBLP:conf/ecoop/LeeASP15}'s model of
 typed first-class classes~\citep{DBLP:conf/ecoop/LeeASP15}. Both works provide typed models of
 first-class classes, and they enable encodings of mixins~\citep{bracha1990mixin}
 similar to those employed in dynamically-typed languages.
