--- a/Sources/Nested/typesystem.tex
+++ b/Sources/Nested/typesystem.tex
@@ -51,7 +51,7 @@ $[[ee : A]]$, singleton records $[[ {l = ee}]]$, and record selections $[[ee.l]]
 
 \begin{figure}[t]
   \centering
-  \drules[S]{$[[A <: B ~~> c]]$}{Declarative subtyping}{refl, trans, top, rcd, arr, andl, andr, and, distArr, topArr, distRcd, topRcd}
+  \drules[S]{$[[A <: B ~~> c]]$}{Declarative subtyping}{refl, trans, top, rcd, arr, andL, andR, and, distArr, topArr, distRcd, topRcd}
   \caption{Declarative specification of subtyping}
   \label{fig:subtype_decl}
 \end{figure}
@@ -180,7 +180,7 @@ previous work~\citep{oliveira2016disjoint, alpuimdisjoint}.
 \begin{figure}[t]
   \centering
 \begin{tabular}{llll} \toprule
-  Types & $[[T]]$ & $\Coloneqq$ & $[[nat]] \mid [[Unit]] \mid [[T1 * T2]] \mid [[T1 -> T2]] $ \\
+  Types & $[[T]]$ & $\Coloneqq$ & $[[pri]] \mid [[Unit]] \mid [[T1 * T2]] \mid [[T1 -> T2]] $ \\
   Terms & $[[e]]$ & $\Coloneqq$ & $[[x]] \mid [[i]] \mid [[unit]] \mid [[\x . e]] \mid [[e1 e2]] \mid [[<e1, e2>]] \mid [[c e]]$ \\
   Coercions & $[[c]]$ & $\Coloneqq$ & $ [[id]] \mid [[c1 o c2]] \mid [[top]] \mid [[c1 -> c2]] \mid [[<c1, c2>]] \mid [[pp1]] \mid [[pp2]] $ \\
   &  &  $\mid$ & $   [[distArr]] \mid [[topArr]]  $ \\
@@ -207,7 +207,7 @@ translating source contexts $[[GG]]$ to target contexts $[[gg]]$.
 
 \begin{definition}[Type translation from \namee to \tname] \label{def:type:translate}
   \begin{align*}
-    | [[nat]] | &= [[nat]] \\
+    | [[pri]] | &= [[pri]] \\
     | [[Top]] | &= \langle \rangle \\
     | [[A -> B]]  | &= [[ | A | -> | B |  ]] \\
     | [[ A & B  ]] | &= [[ | A | * | B |  ]] \\
